# mxd

./: .dockerignore  .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  diesel.toml  pr.txt  rust-toolchain.toml  typos.local.toml  typos.toml
.cargo/: config.toml
.cursor/: README.md
.github/workflows/: audit.yml  build-and-package.yml  ci.yml  coverage-main.yml  coverage.yml  dependabot-automerge.yml  fuzz.yml  release-dry-run.yml  release.yml  tlc-image.yml  tlc.yml
cli-defs/: Cargo.toml
cli-defs/src/: lib.rs
crates/mxd-verification/: Cargo.toml  Dockerfile
crates/mxd-verification/src/: lib.rs
crates/mxd-verification/src/session_model/: actions.rs  mod.rs  privileges.rs  properties.rs  state.rs
crates/mxd-verification/src/session_model/actions/: mod.rs  tests.rs
crates/mxd-verification/tests/: session_gating.rs  session_gating_bdd.rs  tlc_handshake.rs  verification_harness.rs
crates/mxd-verification/tla/: .gitignore  MxdHandshake.cfg  MxdHandshake.tla
diesel_cte_ext/: Cargo.toml  README.md
diesel_cte_ext/src/: builders.rs  columns.rs  connection_ext.rs  cte.rs  lib.rs  macros.rs
diesel_cte_ext/tests/: cte.rs  macros.rs  pg_util.rs  with_cte.rs
docs/: CONTENTS.md  adopting-hexagonal-architecture-in-the-mxd-wireframe-migration.md  adr-001-login-auth-reply-compatibility-layers.md  adr-002-compatibility-guardrails-and-augmentation.md  adr-003-login-authentication-and-reply-augmentation.md  chat-schema.md  codescene-cli.md  complexity-antipatterns-and-refactoring-strategies.md  cte-extension-design.md  design.md  developers-guide.md  documentation-style-guide.md  file-sharing-design.md  fuzzing.md  internal-compatibility-matrix.md  mermaid-validation.md  migration-plan-moving-mxd-protocol-implementation-to-wireframe.md  news-schema.md  ortho-config-users-guide.md  pg-embed-setup-unpriv-users-guide.md  pg-embed-setup-unpriv-v0-5-0-migration-guide.md  pg-embedded-setup-unpriv-users-guide.md  protocol.md  release-notes-qa-sign-off.md  reliable-testing-in-rust-via-dependency-injection.md  repository-layout.md  roadmap.md  rstest-bdd-users-guide.md  rstest-bdd-v0-5-0-migration-guide.md  rstest-bdd-wireframe-server-harness-design.md  rust-doctest-dry-guide.md  rust-testing-with-rstest-fixtures.md  supporting-both-sqlite3-and-postgresql-in-diesel.md  users-guide.md  verification-strategy.md  whitaker-users-guide.md  wireframe-users-guide.md  wireframe-v0-2-0-to-v0-3-0-migration-guide.md
docs/execplans/: 1-2-4-model-handshake-readiness.md  1-3-4-kani-harnesses-for-transaction-framing-invariants.md  1-4-2-route-transactions-through-wireframe.md  1-4-3-introduce-a-shared-session-context.md  1-4-4-outbound-transport-and-messaging-traits.md  1-4-5-reply-builder.md  1-4-6-model-routed-transactions-and-session-gating.md  1-5-1-detect-clients-that-xor-encode-text-fields.md  1-5-2-gate-protocol-quirks-on-the-handshake-sub-version.md  1-5-3-internal-compatibility-matrix.md  1-5-4-verify-xor-and-sub-version-compatibility.md  1-5-6-split-login-authentication-strategies-from-reply-augmentation.md  1-6-1-port-unit-and-integration-tests.md  1-6-2-target-wireframe-server-with-hx-based-validator-harness.md  1-7-1-configure-explicit-memory-budgets-for-the-wireframe-app.md  2-1-1-implement-user-transactions.md  2-1-1b-transactions-305-307-and-agree-disagree-flow.md  3-1-1-file-node-schema-and-permission-model.md  4-1-1-align-news-schema-and-migrations.md  4-1-1-file-node-schema-and-permission-model.md  adopt-pg-embed-setup-v0-5-0.md  adopt-rstest-bdd-v0-4-0.md  adopt-rstest-bdd-v0-5-0.md  afl-circular-dependency-issue.md  wireframe-v0-3-0-migration.md
fuzz/: Cargo.toml  Dockerfile  dict.txt
fuzz/src/: main.rs
migrations/00000000000001_create_news/: down.sqlite.sql  up.postgres.sql  up.sql  up.sqlite.sql
migrations/00000000000003_add_articles/: down.sql
migrations/00000000000003_create_files/: down.sql  up.sql
migrations/00000000000004_create_files/: down.sqlite.sql
migrations/00000000000005_add_bundle_name_parent_index/: up.sqlite.sql
postgres_setup_unpriv/: Cargo.toml
postgres_setup_unpriv/src/: lib.rs  main.rs
postgres_setup_unpriv/tests/: settings.rs
scripts/: install-synhx.sh  run-tlc.sh  triage_crashes.sh  validate_mermaid.py
src/: commands.rs  connection_flags.rs  db.rs  field_id.rs  file_path.rs  handler.rs  handler_tests.rs  header_util.rs  lib.rs  login.rs  main.rs  models.rs  news_handlers.rs  news_path.rs  presence.rs  presence_tests.rs  privileges.rs  protocol.rs  schema.rs  transaction.rs  transaction_type.rs  users.rs
src/commands/: handlers.rs  mod.rs  news.rs  parsing.rs  support.rs  tests.rs
src/db/: articles.rs  audit.rs  bundles.rs  categories.rs  connection.rs  file_legacy_visibility.rs  file_path.rs  files.rs  insert.rs  (+7 more)
test-util/: Cargo.toml
test-util/src/: bdd_helpers.rs  fixtures.rs  lib.rs  postgres.rs  protocol.rs  server.rs  wireframe_bdd_world.rs  wireframe_bdd_world_tests.rs
test-util/src/fixtures/: file_sharing_fixtures.rs  helpers.rs  mod.rs
test-util/src/postgres/: common.rs  embedded.rs  mod.rs
test-util/src/server/: binary.rs  env.rs  mod.rs  readiness.rs
tests/: bdd_handshake.rs  common.rs  create_user_bdd.rs  file_list.rs  file_nodes_repository.rs  file_nodes_repository_bdd.rs  handshake.rs  handshake_invalid.rs  handshake_unsupported_version.rs  integration.rs  migrations.rs  news_articles.rs  news_categories.rs  outbound_messaging_bdd.rs  payload_reject.rs  postgres_env.rs  postgres_force_drop_cleanup.rs  runtime_selection_bdd.rs  session_privileges_bdd.rs  transaction.rs  transaction_streaming.rs  wireframe_compat_guardrails_bdd.rs  wireframe_handshake_metadata.rs  wireframe_login_compat.rs  wireframe_memory_budgets.rs  wireframe_presence_bdd.rs  wireframe_routing_bdd.rs  wireframe_transaction.rs  wireframe_transaction_encoding.rs  wireframe_xor_compat.rs
validator/: Cargo.toml  validator.toml
validator/src/: config.rs  harness.rs  hx_client.rs  lib.rs  policy.rs  server_binary.rs
validator/tests/: login.rs  pending_validators.rs  xor_compat.rs
(+148 files in other folders)
