[package]
name = "mxd"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "gen_corpus"
path = "src/bin/gen_corpus.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
diesel = { version = "2", default-features = false, features = ["chrono"] }
diesel-async = { version = "0.5", default-features = false, features = ["bb8", "sync-connection-wrapper"] }
diesel_migrations = { version = "2", default-features = false }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
cfg-if = "1"
ortho_config = { git = "https://github.com/leynos/ortho-config", tag = "v0.3.0" }
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
diesel_cte_ext = { path = "diesel_cte_ext", default-features = false, features = ["async"] }
futures-util = "0.3"
tracing = "0.1"
figment = { version = "0.10", features = ["env", "test"] }
uncased = "0.9"
xdg = "3"
anyhow = "1"
clap-dispatch = "0.1"
url = { version = "2", optional = true }
figment-json5 = { version = "0.1", optional = true }
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.8", optional = true }

[features]
default = ["sqlite", "toml"]
postgres = [
    "diesel/postgres",
    "diesel_migrations/postgres",
    "diesel-async/postgres",
    "diesel_cte_ext/postgres",
    "diesel_cte_ext/async",
    "url",
    "test-util/postgres",
]
sqlite = [
    "diesel/sqlite",
    "diesel/returning_clauses_for_sqlite_3_35",
    "diesel_migrations/sqlite",
    "diesel-async/sqlite",
    "diesel_cte_ext/sqlite",
    "diesel_cte_ext/async",
    "test-util/sqlite",
]
returning_clauses_for_sqlite_3_35 = ["diesel/returning_clauses_for_sqlite_3_35"]
json5 = ["figment-json5"]
yaml = ["figment/yaml", "serde_yaml"]
toml = ["figment/toml", "dep:toml"]
lint = []

[dev-dependencies]
test-util = { path = "test-util", default-features = false }
postgresql_embedded = { version = "0.20.0", features = ["tokio"] }
temp-env = "0.3"
rstest = "0.26"

[lints.clippy]
pedantic = "warn"
