[workspace]
members = [
    ".",
    "fuzz",
    "postgres_setup_unpriv",
    "test-util",
    "validator",
]
default-members = ["."]
resolver = "2"

[workspace.dependencies]
diesel-cte-ext = { version = "0.1.0", default-features = false, features = ["async"] }

[package]
name = "mxd"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mxd"
path = "src/main.rs"
required-features = ["legacy-networking"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "gen_corpus"
path = "src/bin/gen_corpus.rs"

[[bin]]
name = "mxd-wireframe-server"
path = "src/bin/mxd_wireframe_server.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.3", default-features = false, features = ["chrono"] }
diesel-async = { version = "0.7", default-features = false, features = ["bb8", "sync-connection-wrapper"] }
diesel_migrations = { version = "2.3", default-features = false }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
cfg-if = "1"
ortho_config = { git = "https://github.com/leynos/ortho-config", tag = "v0.3.0" }
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
diesel-cte-ext = { workspace = true }
futures-util = "0.3"
tracing = "0.1"
wireframe = "0.1.0-alpha1"
figment = { version = "0.10", features = ["env", "test"] }
uncased = "0.9"
xdg = "3"
anyhow = "1"
bincode = "2.0.1"
url = { version = "2", optional = true }
figment-json5 = { version = "0.1", optional = true }
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.8", optional = true }

[features]
default = ["legacy-networking", "sqlite", "toml"]
legacy-networking = []
postgres = [
    "diesel/postgres",
    "diesel_migrations/postgres",
    "diesel-async/postgres",
    "diesel-cte-ext/postgres",
    "diesel-cte-ext/async",
    "url",
    "toml",
    "test-util/postgres",
]
sqlite = [
    "diesel/sqlite",
    "diesel/returning_clauses_for_sqlite_3_35",
    "diesel_migrations/sqlite",
    "diesel-async/sqlite",
    "diesel-cte-ext/sqlite",
    "diesel-cte-ext/async",
    "test-util/sqlite",
]
returning_clauses_for_sqlite_3_35 = ["diesel/returning_clauses_for_sqlite_3_35"]
json5 = ["figment-json5"]
yaml = ["figment/yaml", "serde_yaml"]
toml = ["figment/toml", "dep:toml"]
lint = []
test-support = []

[dev-dependencies]
test-util = { path = "test-util", default-features = false }
postgresql_embedded = { version = "0.20", features = ["tokio"] }
temp-env = "0.3"
rstest = "0.26"
rstest-bdd = "0.1.0"
rstest-bdd-macros = { version = "0.1.0", features = ["compile-time-validation"] }
tempfile = "3"
paste = "1.0"
pg-embedded-setup-unpriv = { package = "pg-embed-setup-unpriv", version = "0.1.0", features = ["diesel-support"] }

[lints.clippy]
pedantic = "warn"
