[workspace]
members = [
    ".",
    "crates/mxd-verification",
    "fuzz",
    "test-util",
    "validator",
]
default-members = ["."]
resolver = "2"

[workspace.dependencies]
diesel-cte-ext = { version = "0.1.0", default-features = false, features = ["async"] }
rstest = "0.26.1"

[package]
name = "mxd"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mxd"
path = "src/main.rs"
required-features = ["legacy-networking"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "gen_corpus"
path = "src/bin/gen_corpus.rs"

[[bin]]
name = "mxd-wireframe-server"
path = "src/bin/mxd_wireframe_server.rs"

[[test]]
name = "transaction_streaming"
path = "tests/transaction_streaming.rs"
required-features = ["test-support"]

[[test]]
name = "wireframe_handshake_metadata"
path = "tests/wireframe_handshake_metadata.rs"
required-features = ["test-support"]

[[test]]
name = "wireframe_transaction"
path = "tests/wireframe_transaction.rs"
required-features = ["test-support"]

[dependencies]
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.3", default-features = false, features = ["chrono"] }
diesel-async = { version = "0.7", default-features = false, features = ["bb8", "sync-connection-wrapper"] }
diesel_migrations = { version = "2.3", default-features = false }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
cfg-if = "1"
ortho_config = { git = "https://github.com/leynos/ortho-config", tag = "v0.3.0" }
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
diesel-cte-ext = { workspace = true }
futures-util = "0.3"
tracing = "0.1"
wireframe = "0.2.0"
figment = { version = "0.10", features = ["env", "test"] }
uncased = "0.9"
xdg = "3"
anyhow = "1"
async-trait = "0.1"
bincode = "2.0.1"
bytes = "1"
tokio-util = { version = "0.7", features = ["codec"] }
url = { version = "2", optional = true }
figment-json5 = { version = "0.1", optional = true }
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.8", optional = true }

[features]
default = ["legacy-networking", "sqlite", "toml"]
legacy-networking = []
postgres = [
    "diesel/postgres",
    "diesel_migrations/postgres",
    "diesel-async/postgres",
    "diesel-cte-ext/postgres",
    "diesel-cte-ext/async",
    "url",
    "toml",
    "test-util/postgres",
]
sqlite = [
    "diesel/sqlite",
    "diesel/returning_clauses_for_sqlite_3_35",
    "diesel_migrations/sqlite",
    "diesel-async/sqlite",
    "diesel-cte-ext/sqlite",
    "diesel-cte-ext/async",
    "test-util/sqlite",
]
returning_clauses_for_sqlite_3_35 = ["diesel/returning_clauses_for_sqlite_3_35"]
json5 = ["figment-json5"]
yaml = ["figment/yaml", "serde_yaml"]
toml = ["figment/toml", "dep:toml"]
lint = []
test-support = []

[lints]
workspace = true

[dev-dependencies]
test-util = { path = "test-util", default-features = false }
postgresql_embedded = { version = "0.20", features = ["tokio"] }
rstest = { workspace = true }
rstest-bdd = "0.3.2"
rstest-bdd-macros = { version = "0.3.2", features = ["compile-time-validation"] }
serial_test = "3"
proptest = "1.4.0"
tempfile = "3.23.0"
paste = "1.0.15"
pg-embedded-setup-unpriv = { package = "pg-embed-setup-unpriv", version = "0.1.0", features = ["diesel-support"] }
kani = "0.0.1"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

# 1. hygiene
allow_attributes                    = "deny"
allow_attributes_without_reason     = "deny"
blanket_clippy_restriction_lints    = "deny"
cognitive_complexity                = "deny"
needless_pass_by_value              = "deny"
implicit_hasher                     = "deny"

# 2. debugging leftovers
dbg_macro                           = "deny"
print_stdout                        = "deny"
print_stderr                        = "deny"

# 3. panic-prone operations
unwrap_used                         = "deny"
expect_used                         = "deny"
indexing_slicing                    = "deny"
string_slice                        = "deny"
integer_division                    = "deny"
integer_division_remainder_used     = "deny"
panic_in_result_fn                  = "deny"
unreachable                         = "deny"

# 4. portability
host_endian_bytes                   = "deny"
little_endian_bytes                 = "deny"
big_endian_bytes                    = "deny"

# 5. nursery idiom polish
let_underscore_must_use             = "deny"
or_fun_call                         = "deny"
option_if_let_else                  = "deny"
self_named_module_files             = "deny"
shadow_reuse                        = "deny"
shadow_same                         = "deny"
shadow_unrelated                    = "deny"
str_to_string                       = "deny"
string_lit_as_bytes                 = "deny"
try_err                             = "deny"
unneeded_field_pattern              = "deny"
use_self                            = "deny"

# 6. numerical foot-guns
float_arithmetic                    = "deny"
cast_possible_truncation            = "deny"
cast_possible_wrap                  = "deny"
cast_precision_loss                 = "deny"
lossy_float_literal                 = "deny"

# 7. API ergonomics
missing_const_for_fn                = "deny"
must_use_candidate                  = "deny"
unused_async                        = "deny"

# 8. Error handling
missing_panics_doc                  = "deny"
error_impl_error                    = "deny"
result_large_err                    = "deny"

[workspace.lints.rust]
unknown_lints                       = "deny"
renamed_and_removed_lints           = "deny"
missing_docs                        = "deny"
unexpected_cfgs                     = { level = "warn", check-cfg = ["cfg(kani)"] }

[workspace.lints.rustdoc]
missing_crate_level_docs            = "deny"
broken_intra_doc_links              = "deny"
private_intra_doc_links             = "deny"
bare_urls                           = "deny"
invalid_html_tags                   = "deny"
invalid_codeblock_attributes        = "deny"
unescaped_backticks                 = "deny"
