[package]
name = "postgres-setup-unpriv"
version = "0.1.0"
edition = "2024"

[dependencies]
postgresql_embedded = { version = "0.18", features = ["tokio"] }
nix = { version = "0.28", default-features = false, features = ["user"] }
anyhow = "1"
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"] }
ortho_config = { git = "https://github.com/leynos/ortho-config", tag = "v0.1.0" }
