[package]
name = "postgres-setup-unpriv"
version = "0.1.0"
edition = "2024"

[dependencies]
postgresql_embedded = { version = "0.18", features = ["tokio"] }
nix = { version = "0.28", default-features = false, features = ["user", "fs"] }
color-eyre = "0.6"
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"] }
ortho_config = { git = "https://github.com/leynos/ortho-config", tag = "v0.3.0" }
clap = { version = "4", features = ["derive"] }
figment = { version = "0.10", features = ["env"] }
xdg = "3"
uncased = "0.9"
figment-json5 = { version = "0.1", optional = true }
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.8", optional = true }

[features]
toml = ["figment/toml", "dep:toml"]
json5 = ["dep:figment-json5"]
yaml = ["figment/yaml", "dep:serde_yaml"]

[lints]
workspace = true

[dev-dependencies]
rstest = "0.18"
temp-env = "0.3"
tempfile = "3"
color-eyre = "0.6"
