[package]
name = "test-util"
version = "0.1.0"
edition = "2024"

[dependencies]
tempfile = "3"
nix = { version = "0.27", features = ["signal"] }
mxd = { path = "..", default-features = false, features = ["sqlite"] }
tokio = { version = "1", features = ["rt", "macros"] }
diesel = { version = "2", default-features = false, features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"] }
diesel-async = { version = "0.5", default-features = false, features = ["sqlite", "sync-connection-wrapper"] }
argon2 = { version = "0.5", features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures-util = "0.3"

[features]
default = []
sqlite = [
    "diesel/sqlite",
    "diesel/returning_clauses_for_sqlite_3_35",
    "diesel-async/sqlite",
]
