[package]
name = "test-util"
version = "0.1.0"
edition = "2024"

[dependencies]
tempfile = "3"
nix = { version = "0.28", default-features = false, features = ["signal", "user"] }
once_cell = "1"
mxd = { path = "..", default-features = false }
tokio = { version = "1", features = ["rt", "macros"] }
diesel = { version = "2", default-features = false, features = ["chrono"] }
diesel-async = { version = "0.5", default-features = false, features = ["sync-connection-wrapper"] }
diesel_migrations = { version = "2", default-features = false }
postgresql_embedded = { version = "0.18.5", features = ["tokio"], optional = true }
fs2 = "0.4"
argon2 = { version = "0.5", features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures-util = "0.3"
rstest = "0.18"
postgres = { version = "0.19", optional = true }
uuid = { version = "1", features = ["v7"], optional = true }
url = { version = "2", optional = true }
tracing = "0.1"

[features]
default = ["sqlite"]
postgres = [
    "diesel/postgres",
    "diesel-async/postgres",
    "mxd/postgres",
    "postgresql_embedded",
    "diesel_migrations/postgres",
    "dep:postgres",
    "dep:uuid",
    "dep:url",
]
sqlite = [
    "diesel/sqlite",
    "diesel/returning_clauses_for_sqlite_3_35",
    "diesel-async/sqlite",
    "mxd/sqlite",
]
