[package]
name = "test-util"
version = "0.1.0"
edition = "2024"

[dependencies]
tempfile = "3"
nix = { version = "0.28", default-features = false, features = ["signal", "user", "fs"] }
mxd = { path = "..", default-features = false, features = ["test-support"] }
tokio = { version = "1", features = ["rt", "macros"] }
diesel = { version = "2.3", default-features = false, features = ["chrono"] }
diesel-async = { version = "0.7", default-features = false, features = ["sync-connection-wrapper"] }
diesel_migrations = { version = "2.3", default-features = false }
pg-embedded-setup-unpriv = { package = "pg-embed-setup-unpriv", version = "0.4.0", optional = true, features = ["async-api"] }
argon2 = { version = "0.5", features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures-util = "0.3"
rstest = "0.18"
tracing = "0.1"
anyhow = "1"
wait-timeout = "0.2.1"
postgres = { version = "0.19", optional = true }
uuid = { version = "1", features = ["v7"], optional = true }
url = { version = "2", optional = true }
thiserror = { version = "2.0.0", optional = true }
eyre = { version = "0.6", optional = true }

[lints]
workspace = true

[features]
default = ["sqlite"]
postgres = [
    "diesel/postgres",
    "diesel-async/postgres",
    "mxd/postgres",
    "diesel_migrations/postgres",
    "dep:postgres",
    "dep:uuid",
    "dep:url",
    "dep:pg-embedded-setup-unpriv",
    "dep:thiserror",
    "dep:eyre",
]
sqlite = [
    "diesel/sqlite",
    "diesel/returning_clauses_for_sqlite_3_35",
    "diesel-async/sqlite",
    "mxd/sqlite",
]
lint = []
