[package]
name = "validator"
version = "0.1.0"
edition = "2024"

[dependencies]
expectrl = "0.7"
tempfile = "3"
which = "4"
nix = { version = "0.27", optional = false, features = ["signal"] }

[lints]
workspace = true

[features]
default = ["sqlite"]
sqlite = ["test-util/sqlite", "mxd/sqlite"]
postgres = ["test-util/postgres", "mxd/postgres"]

[dev-dependencies]
test-util = { path = "../test-util", default-features = false }
mxd = { path = "..", default-features = false }
argon2 = { version = "0.5", features = ["std"] }
diesel = { version = "2.3", default-features = false, features = ["sqlite", "postgres"] }
diesel-async = { version = "0.7", default-features = false, features = ["sqlite", "postgres", "sync-connection-wrapper"] }
