[package]
name = "validator"
version = "0.1.0"
edition = "2024"

[dependencies]
expectrl = "0.9"
tempfile = "3"
which = "4"
nix = { version = "0.30", optional = false, features = ["signal"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9"
thiserror = "2"
test-util = { path = "../test-util", default-features = false }
wait-timeout = "0.2"

[lints]
workspace = true

[features]
default = ["sqlite"]
sqlite = ["test-util/sqlite", "mxd/sqlite"]
postgres = ["test-util/postgres", "mxd/postgres"]

[dev-dependencies]
mxd = { path = "..", default-features = false }
argon2 = { version = "0.5", features = ["std"] }
diesel = { version = "2.3", default-features = false, features = ["sqlite", "postgres"] }
diesel-async = { version = "0.9", default-features = false, features = ["sqlite", "postgres", "sync-connection-wrapper"] }
rstest = { workspace = true }
