[package]
name = "mxd-verification"
version = "0.1.0"
edition = "2024"
description = "Formal verification specs and harnesses for mxd"
publish = false

[dependencies]
stateright = "0.30"

[dev-dependencies]
rstest = { workspace = true }
rstest-bdd = "0.5.0"
rstest-bdd-macros = { version = "0.5.0", features = ["compile-time-validation"] }

[lints]
workspace = true
