[package]
name = "mxd-verification"
version = "0.1.0"
edition = "2024"
description = "Formal verification specs and harnesses for mxd"
publish = false

[dependencies]
stateright = "0.30"

[dev-dependencies]
rstest = { workspace = true }
rstest-bdd = { workspace = true }
rstest-bdd-macros = { workspace = true }

[lints]
workspace = true
